womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/unexpected_subworkflow_call_input_failure/unexpected_subworkflow_call_input_failure_import.wdl
version 1.0

workflow subwf {
  Int i = 5

  input {
    Int j = i + 1000
  }

  output {
    Int k = j
  }
}
